--- a/documents/epi/dap/dap_atlas_workshop.html
+++ b/documents/epi/dap/dap_atlas_workshop.html
@@ -116,17 +116,17 @@ horizontal-align: left;
   <ul>
   <li><a href="#the-cook-county-health-atlas" id="toc-the-cook-county-health-atlas" class="nav-link" data-scroll-target="#the-cook-county-health-atlas">The Cook County Health Atlas</a></li>
   <li><a href="#data-ambassador-program-workshop" id="toc-data-ambassador-program-workshop" class="nav-link" data-scroll-target="#data-ambassador-program-workshop">Data Ambassador Program Workshop</a></li>
+  </ul></li>
   <li><a href="#exploring-health-indicators" id="toc-exploring-health-indicators" class="nav-link" data-scroll-target="#exploring-health-indicators">Exploring Health Indicators</a>
-  <ul class="collapse">
+  <ul>
   <li><a href="#custom-reports" id="toc-custom-reports" class="nav-link" data-scroll-target="#custom-reports">Custom reports</a></li>
   <li><a href="#search-indicators" id="toc-search-indicators" class="nav-link" data-scroll-target="#search-indicators">Search indicators</a></li>
   <li><a href="#visualize-and-stratify-indicators" id="toc-visualize-and-stratify-indicators" class="nav-link" data-scroll-target="#visualize-and-stratify-indicators">Visualize and stratify indicators</a></li>
   </ul></li>
   <li><a href="#grantwriting-and-fundraising" id="toc-grantwriting-and-fundraising" class="nav-link" data-scroll-target="#grantwriting-and-fundraising">Grantwriting and Fundraising</a>
-  <ul class="collapse">
+  <ul>
   <li><a href="#create-custom-tables" id="toc-create-custom-tables" class="nav-link" data-scroll-target="#create-custom-tables">Create custom tables</a></li>
   <li><a href="#create-custom-maps" id="toc-create-custom-maps" class="nav-link" data-scroll-target="#create-custom-maps">Create custom maps</a></li>
-  </ul></li>
   </ul></li>
   </ul>
 </nav>
@@ -182,18 +182,19 @@ Train the Trainer
 </div>
 </div>
 </section>
-<section id="exploring-health-indicators" class="level2">
-<h2 class="anchored" data-anchor-id="exploring-health-indicators">Exploring Health Indicators</h2>
-<section id="custom-reports" class="level3">
-<h3 class="anchored" data-anchor-id="custom-reports">Custom reports</h3>
+</section>
+<section id="exploring-health-indicators" class="level1">
+<h1>Exploring Health Indicators</h1>
+<section id="custom-reports" class="level2">
+<h2 class="anchored" data-anchor-id="custom-reports">Custom reports</h2>
 <p>In addition to the data, maps, and tables on the atlas, CCDPH, makes available topic-specific pages on the platform that provide useful information on emerging health issues using historical and updated information. These topic-specific pages will come in the form of program pages, data briefs, and reports.</p>
 <ul>
 <li><p>The <a href="https://cookcountyhealthatlas.org/change-institute">Change Institute Chronic Disease Measures</a> exemplifies one of the project pages available on the atlas. The page provides insights concerning patterns of four chronic diseases within Cook County—cancer, diabetes, heart disease and stroke—which collectively account for nearly half of all deaths.</p></li>
 <li><p>Similarly, the <a href="https://cookcountyhealthatlas.org/injury-burden">Injury Burden report</a> provides a summary of the burden of injury within suburban Cook County, how we define injury and types of injury as well as links to injury related health indicators. Additionally, this document describes the methodology for creating indicators.</p></li>
 </ul>
 </section>
-<section id="search-indicators" class="level3">
-<h3 class="anchored" data-anchor-id="search-indicators">Search indicators</h3>
+<section id="search-indicators" class="level2">
+<h2 class="anchored" data-anchor-id="search-indicators">Search indicators</h2>
 <p>The atlas has over 400 indicators derived from federal, state, and local data sources. There are multiple ways to search and explore these health indicators via the website’s landing page and the “indicator” option on the left navigation panel. Follow the steps below to examine a specific injury-related indicator on the atlas. Review the associated video for additional assistance.</p>
 <div class="callout callout-style-simple callout-note no-icon callout-titled">
 <div class="callout-header d-flex align-content-center">
@@ -230,8 +231,8 @@ VIDEO: Search indicators
 </div>
 </div>
 </section>
-<section id="visualize-and-stratify-indicators" class="level3">
-<h3 class="anchored" data-anchor-id="visualize-and-stratify-indicators">Visualize and stratify indicators</h3>
+<section id="visualize-and-stratify-indicators" class="level2">
+<h2 class="anchored" data-anchor-id="visualize-and-stratify-indicators">Visualize and stratify indicators</h2>
 <p>Each indicator can be explored through interactive maps and charts. Many indicators can also be examined across different population groups such as by race, ethnicity, sex, and/or age group. Follow the steps below to visualize and stratify a specific injury-related indicator on the atlas. Review the associated video for additional assistance.</p>
 <div class="callout callout-style-simple callout-note no-icon callout-titled">
 <div class="callout-header d-flex align-content-center">
@@ -271,10 +272,10 @@ VIDEO: Visualize indicators
 </div>
 </section>
 </section>
-<section id="grantwriting-and-fundraising" class="level2">
-<h2 class="anchored" data-anchor-id="grantwriting-and-fundraising">Grantwriting and Fundraising</h2>
-<section id="create-custom-tables" class="level3">
-<h3 class="anchored" data-anchor-id="create-custom-tables">Create custom tables</h3>
+<section id="grantwriting-and-fundraising" class="level1">
+<h1>Grantwriting and Fundraising</h1>
+<section id="create-custom-tables" class="level2">
+<h2 class="anchored" data-anchor-id="create-custom-tables">Create custom tables</h2>
 <p>Custom tables can be created to help nonprofits and other organizations efficiently communicate differences in health outcomes across places and population subgroups in suburban Cook County.</p>
 <div class="callout callout-style-simple callout-note no-icon callout-titled">
 <div class="callout-header d-flex align-content-center">
@@ -313,8 +314,8 @@ VIDEO: Custom tables
 </div>
 </div>
 </section>
-<section id="create-custom-maps" class="level3">
-<h3 class="anchored" data-anchor-id="create-custom-maps">Create custom maps</h3>
+<section id="create-custom-maps" class="level2">
+<h2 class="anchored" data-anchor-id="create-custom-maps">Create custom maps</h2>
 <p>Similarly custom maps demonstrate spatial variations of need and help build a compelling case for the potential impact of proposed initiatives.</p>
 <div class="callout callout-style-simple callout-note no-icon callout-titled">
 <div class="callout-header d-flex align-content-center">
@@ -352,7 +353,6 @@ VIDEO: Custom maps
 </div>
 </div>
 </div>
-</section>
 </section>
 </section>
 
